--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
 :root {
     --site-bg-color: rgb(255, 255, 255);
     --notepad-bg-color:rgba(0,0,0,0.05);
+    --text-color:black;
+}
+
+body.dark {
+    --site-bg-color: rgb(20, 20, 20);
+    --notepad-bg-color:rgba(255,255,255,.05);
+    --text-color:grey;
 }
 
 body {
@@ -12,24 +19,37 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    color: var(--text-color);
+    caret-color: var(--text-color);
+    transition: background-color 200ms ease;
 }
 
 .app-container {
 	width: 100%;
-	margin-top: 2rem;
-	background-color: rgba(0, 0, 0, 0.05);
+	margin-top: 2rem !important;
+	background-color: var(--notepad-bg-color);
 	padding: 0.5rem;
     border-radius: 5px;
+    transition: background-color 200ms ease;
 }
 
 
 #notepad {
     width: 95%;
-    height: 40rem;
+    height: 30rem;
     display: block;
     font-family: "Itim",cursive;
     font-size: 1.2rem;
     padding: 0.5rem;
+    background-color: transparent;
+    color: inherit;
+    
+    resize: none; /* remove resize symmbol */;
+
+    outline: none;
+
+    border: none;
+    transition: background-color 200ms ease;
 }
 
 
