--- a/style.css
+++ b/style.css
@@ -1,110 +1,228 @@
 @import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 :root {
-    --site-bg-color: rgb(255, 255, 255);
-    --notepad-bg-color:rgba(0,0,0,0.05);
-    --text-color:black;
+	--site-bg-color: rgb(255, 255, 255);
+	--notepad-bg-color: rgba(0, 0, 0, 0.05);
+    --text-color: black;
+    --border-color:grey;
 }
 
 body.dark {
-    --site-bg-color: rgb(20, 20, 20);
-    --notepad-bg-color:rgba(255,255,255,.05);
-    --text-color:grey;
+	--site-bg-color: rgb(20, 20, 20);
+	--notepad-bg-color: rgba(255, 255, 255, 0.05);
+	--text-color: grey;
 }
 
 body {
 	font-family: "Itim", cursive;
-    font-size: larger;
-    background-color: var(--site-bg-color) ;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    color: var(--text-color);
-    caret-color: var(--text-color);
-    transition: background-color 200ms ease;
+	font-size: larger;
+	background-color: var(--site-bg-color);
+	overflow: hidden;
+	color: var(--text-color);
+	caret-color: var(--text-color);
+	transition: background-color 200ms ease;
 }
 
-.app-container {
-	width: 100%;
-	margin-top: 2rem !important;
-	background-color: var(--notepad-bg-color);
-	padding: 0.5rem;
-    border-radius: 5px;
-    transition: background-color 200ms ease;
+
+
+
+.app-container .left-panel {
+	display: none;
 }
+
+.app-container .notepad-container {
+	display: block;
+}
+
+.app-container.left .notepad-container {
+	display: none;
+}
+
+.app-container.left .left-panel {
+	display: block;
+}
+
+
+
+
+
+
+
+.app-container {
+	position: absolute;
+	/* background-color: green; */
+	left: 0;
+	right: 0;
+	top: 0;
+    bottom: 0;
+    
+    display: flex;
+}
+
+.left-panel {
+    width: 100%;
+    background-color: var(--site-bg-color);
+}
+
+.search-container {
+    width: 100%;
+    /* background-color: greenyellow; */
+    padding: 1.5em .5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-container input {
+    width: 80%;
+    min-width: 200px;
+    padding: 1em;
+    border-width: 0;
+    border-radius: 5px;
+    outline: none;
+    background-color: var(--notepad-bg-color);
+    color: var(--text-color);
+
+}
+
+.options-container {
+    width: 100%;
+    /* background-color: grey; */
+    height: 2rem;
+    padding: .5em;
+	border: 1px solid var(--border-color);
+	border-width: 1px 0;
+}
+
+.files-container {
+    overflow-y: auto;
+    width: 100%;
+    height: 100%;
+	/* background-color: var(--notepad-bg-color); */
+}
+
+.files-container .file {
+    width: 100%;
+    min-height: 2rem;
+    padding: .5em 1em;
+    /* background-color: var(--notepad-bg-color); */
+    border: 1px solid var(--border-color);
+	border-width: 0px 0 1px 0;
+}
+
+.files-container .file:hover {
+    background-color: var(--notepad-bg-color);
+}
+
+.files-container .file p {
+    padding: .4em;
+}
+
+
+/* .notepad-container.hidden {
+	display: none;
+} */
+
+
+.notepad-container {
+	width: 100%;
+	background-color: var(--notepad-bg-color);
+	transition: background-color 200ms ease;
+	padding: 1em;
+}
+
+
+.notepad-container h3 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	outline: none;
+
+	border-bottom: 1px solid var(--text-color);
+}
+
 
 
 #save-indicator {
-    width: 100%;
-    height: .5rem;
-    background-color: hsl(120, 100%, 25%);
+	width: 100%;
+	height: 0.5rem;
+	background-color: hsl(120, 100%, 25%);
+	border-radius: 2px;
 }
 
 #notepad {
-    width: 95%;
-    height: 30rem;
-    display: block;
-    font-family: "Itim",cursive;
-    font-size: 1.2rem;
-    padding: 0.5rem;
-    background-color: transparent;
-    color: inherit;
-    
-    resize: none; /* remove resize symmbol */;
+	width: 95%;
+	height: 30rem;
+	display: block;
+	font-family: "Itim", cursive;
+	font-size: 1.2rem;
+	margin-top: 1em;
+	padding: 0.5rem;
+	background-color: transparent;
+	color: inherit;
 
-    outline: none;
+	resize: none; /* remove resize symmbol */
 
-    border: none;
-    transition: background-color 200ms ease;
+	outline: none;
+
+	border: none;
+	transition: background-color 200ms ease;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .center {
 	margin: auto;
 }
 
 .text-center {
-    text-align: center;
+	text-align: center;
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-	.app-container {
-		width: 90%;
-	}
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-	.app-container {
-		width: 80%;
+
+
+	.app-container .left-panel {
+		display: block;
+	}
+	
+	.app-container .notepad-container {
+		display: block;
+	}
+	
+	.app-container.left .notepad-container {
+		display: block;
+	}
+	
+	.app-container.left .left-panel {
+		display: block;
+	}
+
+
+	.left-panel {
+		width: 30%;
+		max-width: 350px;
+	}
+
+	.notepad-container {
+		width: 100%;
 	}
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-	.app-container {
-		width: 75%;
-	}
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-	.app-container {
-		width: 65%;
-	}
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
