--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ body {
     border: 1px solid var(--border-color);
 	border-width: 0px 0 1px 0;
 	position: relative;
+	cursor: pointer;
 }
 
 .files-container .file:hover {
