--- a/style.css
+++ b/style.css
@@ -224,7 +224,34 @@ body.dark .left-panel::after {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	position: relative;
 }
+
+
+.mode-btn {
+	position: absolute;
+	top: 1em;
+	right: 1em;
+
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	background-color: transparent;
+	color: var(--text-color);
+	padding: .5em .6em;
+	margin: 0 2px;
+	border-radius: 5px;
+	cursor: pointer;
+
+	transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
+
+}
+
+.mode-btn:hover {
+	background-color: var(--text-color);
+	color: var(--site-bg);
+}
+
 
 .search-container input {
 	width: 80%;
