--- a/style.css
+++ b/style.css
@@ -222,9 +222,9 @@ body.dark .left-panel::after {
 
 .search-container {
 	width: 100%;
-	height: 15%;
+	height: 10%;
 	background-color: var(--search-cont-bg);
-	padding: 1.5em 0.5em;
+	padding: 1em 0.5em;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -300,7 +300,7 @@ body.dark .left-panel::after {
 .files-container {
 	overflow-y: auto;
 	width: 100%;
-	height: 75%;
+	height: 70%;
 	background-color: var(--files-cont-bg);
 	overflow-y: scroll;
 	padding-bottom: 1em;
@@ -352,11 +352,82 @@ body.dark .left-panel::after {
 	transition:color 200ms ease-in-out;
 }
 
-.file .delete-btn:hover {
-	/* background-color: var(--red);
-	color: var(--site-bg); */
-
+.font-mode {
+	font-size: .9rem;
 }
+.font-mode > span {
+	font-size: 1.3em;
+}
+
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 2.3em;
+	height: 1.3em;
+  }
+  
+  .switch input { 
+	opacity: 0;
+	width: 0;
+	height: 0;
+  }
+  
+  .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: var(--site-bg);
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  .slider:before {
+	position: absolute;
+	content: "";
+	height: 1em;
+	width: 1em;
+	left: 0.15em;
+	bottom: 0.15em;
+	background-color: var(--text-color);
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  input:checked + .slider {
+	background-color: var(--orange);
+  }
+  
+  input:focus + .slider {
+	box-shadow: 0 0 1px var(--orange);
+  }
+  
+  input:checked + .slider:before {
+	-webkit-transform: translateX(1em);
+	-ms-transform: translateX(1em);
+	transform: translateX(1em);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+	border-radius: 1.3em;
+  }
+  
+  .slider.round:before {
+	border-radius: 50%;
+  }
+
+
+.footer {
+	width: 100%;
+	height: 10%;
+	padding: .7em 1em;
+	background-color: var(--orange-5);
+}
+
+
 
 
 
@@ -470,6 +541,10 @@ body.dark .left-panel::after {
 	border: none;
 	transition: background-color 200ms ease,color 200ms ease-in-out;
 }
+
+
+
+
 
 .center {
 	margin: auto;
