--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ body.dark .left-panel::after {
 .files-container {
 	overflow-y: auto;
 	width: 100%;
-	height: 70%;
+	height: 75%;
 	background-color: var(--files-cont-bg);
 	overflow-y: scroll;
 	padding-bottom: 1em;
@@ -326,7 +326,7 @@ body.dark .left-panel::after {
 	padding: 0.4em;
 	font-size: 1.1rem;
 	line-height: 2rem;
-	vertical-align: middle;
+	vertical-align: top;
 	opacity: .8;
 	 transition: color 200ms ease;
 }
@@ -353,11 +353,31 @@ body.dark .left-panel::after {
 	transition:color 200ms ease-in-out;
 }
 
+.footer {
+	width: 100%;
+	height: 5%;
+	padding: .7em 1em;
+	box-shadow: -1px -1px 20px rgba(100, 100, 100, 0.1);
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	opacity: 0.8;
+}
+
 .font-mode {
-	font-size: .9rem;
+	font-size: .8rem;
+	display: block;
 }
 .font-mode > span {
 	font-size: 1.3em;
+	margin-right: .3em;
+}
+
+.repo-link {
+	font-size: .8rem;
+	/* text-align: center; */
+
 }
 
 .switch {
@@ -421,12 +441,7 @@ body.dark .left-panel::after {
   }
 
 
-.footer {
-	width: 100%;
-	height: 10%;
-	padding: .7em 1em;
-	background-color: var(--orange-5);
-}
+
 
 
 
