--- a/src/style.css
+++ b/src/style.css
@@ -222,9 +222,8 @@ body.dark .left-panel::after {
 
 .search-container {
   width: 100%;
-  height: 11%;
   background-color: var(--search-cont-bg);
-  padding: 1em 0.5em 0.5em;
+  padding: 0em 0.5em 0.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -237,14 +236,15 @@ body.dark .left-panel::after {
   position: relative;
 }
 
-.mode-btn {
-  position: absolute;
+.utility-btns-container {
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.utility-btns-container button {
   font-size: 1.2rem;
-  top: 1.5em;
-  right: 1.5em;
-  -webkit-transform: translate(50%, -50%);
-  -ms-transform: translate(50%, -50%);
-  transform: translate(50%, -50%);
 
   font-weight: bold;
   text-transform: uppercase;
