--- a/src/style.css
+++ b/src/style.css
@@ -655,6 +655,47 @@ input:checked + .slider:before {
   transition: background-color 200ms ease, color 200ms ease-in-out;
 }
 
+.help-modal-container {
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  inset: 0;
+  transition: opacity 200ms ease-in-out;
+}
+
+.help-modal-container.show {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.help-modal-container .help-modal-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  transition: background-color 200ms ease-in-out;
+}
+
+.help-modal-container.show .help-modal-overlay {
+  background-color: rgba(0, 0, 0, 0.379);
+}
+
+.help-modal-container .help-modal {
+  width: 800px;
+  height: 550px;
+  background-color: var(--dark-6);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 1rem;
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: transform 200ms ease-in-out;
+}
+
+.help-modal-container.show .help-modal {
+  transform: translate(-50%, -50%) scale(1);
+}
+
 .center {
   margin: auto;
 }
