--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@
 
   --text-color: var(--dark-1);
   --border-color: var(--orange);
+  --gray-color: var(--dark-6);
 }
 
 * {
@@ -76,6 +77,7 @@ body.dark {
 
   --text-color: var(--light-5);
   --border-color: var(--orange-1);
+  --gray-color: var(--light-6);
 }
 
 body {
@@ -575,6 +577,20 @@ input:checked + .slider:before {
   justify-content: space-around;
   border-bottom: 1px solid var(--border-color);
   background-color: var(--file-head-cont-bg);
+}
+
+.file-head-container .copy-filename-btn {
+  padding: 0.2rem;
+  font-size: 1.5rem;
+  color: var(--gray-color);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: transform 200ms ease-in-out, color 200ms ease-in-out;
+}
+
+.file-head-container .copy-filename-btn:hover {
+  transform: scale(1.2);
 }
 
 .file-head-container .current-delete-btn {
