--- a/src/style.css
+++ b/src/style.css
@@ -647,9 +647,16 @@ input:checked + .slider:before {
   opacity: 0.3;
 }
 
+.notepad-textarea-wrapper {
+  flex: 1;
+  display: flex;
+  padding-bottom: 0.5rem;
+}
+
 #notepad {
   font-family: "Fira Sans", sans-serif;
   width: 100%;
+  height: 100%;
   display: block;
   flex: 1;
   /* min-height: 100%; */
